# trash

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
src/: main.rs  move_files.rs  trash.rs
