[package]
name = "trash"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.2"
glob = "0.3.1"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
colorize = { path = "../rs-boil/colorize" }